feat(play-music-command): creating required url parameter